# DOC

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose-prod.yml  docker-compose.api-test.yml  docker-compose.frontend-test.yml  docker-compose.override.yml  docker-compose.uitest.yml  docker-compose.yml  language_codes.json  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
backend/: requirements-dev.in  requirements-dev.txt  requirements-prod.txt  requirements.in  requirements.txt  setup.py
backend/document/: config.py
backend/document/domain/: assembly_strategies.py  bible_books.py  document_generator.py  exceptions.py  model.py  parsing.py  resource_lookup.py  resource_lookup_experimental.py  worker.py
backend/document/entrypoints/: app.py  routes.py
backend/document/markdown_extensions/: link_print_transformer_preprocessor.py  link_transformer_preprocessor.py  remove_section_preprocessor.py
backend/document/markdown_transforms/: link_regexes.py  markdown_transformer.py
backend/document/stet/: model.py  stet.py  stet_cli_client.py  template.mustache  util.py
backend/document/utils/: file_utils.py  tw_utils.py
backend/templates/html/: header_compact_enclosing.html  header_enclosing.html  header_enclosing_landscape.html  stet.html
docs/: design.org
dotnet/USFMParserDriver/: Program.cs  USFMParserDriver.csproj
frontend/: .env  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  snowpack.config.json  start-nginx.sh  svelte.config.js  tailwind.config.cjs  vite.config.js
frontend/src/: App.svelte  app.html  envvars.json
frontend/src/components/: Books.svelte  GenerateDocument.svelte  Languages.svelte  ResourceTypes.svelte  (+2 more)
tests/: pytest.ini
tests/e2e/: conftest.py  test_api.py  test_api_assembly_strategy_combinations_book_then_lang.py  test_api_assembly_strategy_combinations_book_then_lang_by_chapter.py  test_api_assembly_strategy_combinations_lang_then_book.py  test_api_assembly_strategy_combinations_lang_then_book_by_chapter.py  test_api_assembly_strategy_combinations_lang_then_book_by_chapter_docx.py  test_api_assembly_strategy_combinations_lang_then_book_by_verse.py  test_api_english_combinatoric.py  test_api_randomized_combinatoric.py  test_api_stet_docx.py  test_biel_helper.py  test_send_email.py  test_stream_pdf.py
tests/shared/: utils.py
tests/unit/: test_biel_helper_resource_json_lookup.py  test_document_generator.py  test_markdown_transformers.py  test_resource_lookup_api.py
(+47 files in other folders)
